FIX missing gap between card title and likes count

--- a/src/scss/components/_photo-card.scss
+++ b/src/scss/components/_photo-card.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    gap: 1rem;
   }
 
   &__name,
